# RCI_KIMM_legged_robot

./: README.md
kimm_wheel_legged_robot_bringup/: CMakeLists.txt  package.xml
kimm_wheel_legged_robot_bringup/config/: diff_drive_controller.yaml
kimm_wheel_legged_robot_bringup/launch/: gazebo.py
kimm_wheel_legged_robot_bringup/worlds/: park.world
kimm_wheel_legged_robot_description/: CMakeLists.txt  package.xml
kimm_wheel_legged_robot_description/urdf/: kimm_wheel_legged_robot_drive.urdf  kimm_wheel_legged_robot_walk.urdf  kimm_wheel_robot_legged_diffdrive.xacro.urdf
kimm_wheel_legged_robot_viz/: CMakeLists.txt  package.xml
kimm_wheel_legged_robot_viz/launch/: joint_state_publisher_gui.launch.py
kimm_wheel_legged_robot_viz/rviz/: joint_state_publisher_gui.rviz  view_robot.rviz
