<?xml version="1.0"?>
<package format="3">
  <name>kimm_wheel_legged_robot_viz</name>
  <version>0.0.1</version>
  <description>Kimm Wheel Legged Robot Rviz</description>

  <maintainer email="chohh7391@khu.ac.kr">Hyunho Cho</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>